--- a/index.html
+++ b/index.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+    <title>Isaac Truss</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+    <h1>Isaac Truss</h1>
+    <div></div>
+
+    <h2>About Me</h2>
+    <p>
+        Having completed home projects, gained work experience among professional IT Technicians, and achieved
+        good grades in my GCSEs and great A-Level grades; I am eager to broaden my knowledge and
+        professional opportunities in the IT industry. I enjoy working with technology and helping people with any IT
+        issues. I will work hard to improve my skills and be a valuable member of the team.
+    </p>
+    <div></div>
+    <a href="CV.pdfl">CV</a>
+    <div></div>
+
+    <h2>Qualifications</h2>
+    <div></div>
+
+    <h3>General Certificate of Secondary Education (GCSE)</h3>
+    <b><i>Dover Grammar School for Boys</i></b>
+    <div></div>
+    <b><i>September 2017 - July 2022</i></b>
+    <div></div>
+    <p>test</p>
+    <div></div>
+
+    <h3>A-Levels</h3>
+    <b><i>Dover Grammar School for Boys</i></b>
+    <div></div>
+    <b><i>September 2022 - July 2024</i></b>
+    <div></div>
+    <p>test</p>
+    <div></div>
+
+    <h3>Bsc (Hons) Computer Forensics and Cybersecurity</h3>
+    <b><i>Canterbury Christ Church University</i></b>
+    <div></div>
+    <b><i>September 2014 - Present</i></b>
+    <div></div>
+    <p>test</p>
+    <div></div>
+
+    <h2>Skills</h2>
+    <div></div>
+
+    <h2>Portfolio</h2>
+    <div></div>
+    <ul>
+        <li><a href="homelab.html">Homelab</a></li>
+        <li><a href="malwareanalysislab.html">Malware Analysis Lab</a></li>
+    </ul>
 
 </body>
 </html>
